--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -456,10 +456,10 @@ ul {
 	list-style: none;
 }
 
-a:hover {
+/* a:hover { */
 	/* color: var(--color-dark); */
 	/* font-size: 1.5rem; */
-}
+/* } */
 
 .ql-editor {
 	min-height: 200px;
